--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,42 +1,52 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Dart
-
+name: DEV - build and deploy to firebase distribution
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - "develop"
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
-
-      # Note: This workflow uses the latest stable version of the Dart SDK.
-      # You can specify other versions if desired, see documentation here:
-      # https://github.com/dart-lang/setup-dart/blob/main/README.md
-      # - uses: dart-lang/setup-dart@v1
-      - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
-
-      - name: Install dependencies
-        run: dart pub get
-
-      # Uncomment this step to verify the use of 'dart format' on each commit.
-      # - name: Verify formatting
-      #   run: dart format --output=none --set-exit-if-changed .
-
-      # Consider passing '--fatal-infos' for slightly stricter analysis.
-      - name: Analyze project source
-        run: dart analyze
-
-      # Your project will need to have tests in test/ and a dependency on
-      # package:test for this step to succeed. Note that Flutter projects will
-      # want to change this to 'flutter test'.
-      - name: Run tests
-        run: dart test
+      - uses: actions/checkout@v1
+      - name: Get current time
+        uses: josStorer/get-current-time@v2
+        id: current-date
+        with:
+          format: YYYY.MM.DD
+          utcOffset: "+07:00"
+      - name: Get current time
+        uses: josStorer/get-current-time@v2
+        id: current-time
+        with:
+          format: YYYYMMDDHH
+          utcOffset: "+07:00"
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: "12.x"
+      - uses: subosito/flutter-action@v1
+        with:
+          # flutter-version: '3.10.6'
+          channel: "stable"
+      - name: Get flutter version
+        id: get_flutter_version
+        uses: its404/get-flutter-version@v1.0.0
+      - name: Build vars
+        id: vars
+        run: |
+          echo "::set-output name=version_old::${{ steps.get_flutter_version.outputs.version_number }}+${{ steps.get_flutter_version.outputs.build_number }}"
+          echo "::set-output name=version_new::${{ steps.current-date.outputs.formattedTime }}+${{ steps.current-time.outputs.formattedTime }}"
+      - name: Replace YAML version with tag version
+        run: |
+          sed -i 's/${{steps.vars.outputs.version_old}}/${{steps.vars.outputs.version_new}}/g' pubspec.yaml|
+          echo "Tag used version: ${{steps.vars.outputs.version_old}} - ${{steps.vars.outputs.version_new}}"
+      - run: flutter pub get
+      - run: flutter build apk --release --flavor production
+      - name: Firebase App Distribution
+        uses: wzieba/Firebase-Distribution-Github-Action@v1
+        with:
+          appId: ${{secrets.FIREBASE_APP_ID}}
+          serviceCredentialsFileContent: ${{secrets.CREDENTIAL_FILE_CONTENT}}
+          groups: bussinessff-tester
+          file: build/app/outputs/flutter-apk/app-production-release.apk
