--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,29 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get: ^4.6.6
+  json_serializable: ^6.7.1
+  json_annotation: ^4.8.1
+  build_runner: ^2.4.6
+  flutter_dotenv: ^5.1.0
+  dio: ^5.3.3
+  pretty_dio_logger: ^1.3.1
+  shared_preferences: ^2.2.1
+  path_provider: ^2.1.1
+  logger: ^2.0.2+1
+  flutter_easyloading: ^3.0.5
+  rxdart: ^0.27.7
+  alice: ^0.3.3
+  flutter_screenutil: ^5.9.0
+  event_bus: ^2.0.0
+  share_plus: ^7.1.0
+  uuid: ^3.0.7
+  firebase_core: ^2.16.0
+  flutter_localization: ^0.1.14
+  fcm_config: ^3.5.2
+  copy_with_extension_gen: 5.0.0
+  flutter_gen_runner: 5.3.1
+  
 
 dev_dependencies:
   flutter_test:
@@ -47,9 +70,25 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
 
+flutter_gen:
+  output: lib/gen/
+  line_length: 80
+
+  integrations:
+    flutter_svg: true
+
+  assets:
+    enable: true
+    outputs:
+      class_name: Assets
+      package_parameter_enabled: false
+      style: dot-delimiter
+
+  font:
+    enable: true
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -57,6 +96,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/
+    - assets/icons/
+    - assets/env/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
