--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,8 +55,9 @@ dependencies:
   firebase_core: ^2.16.0
   flutter_localization: ^0.1.14
   fcm_config: ^3.5.2
-  copy_with_extension_gen: 5.0.0
-  flutter_gen_runner: 5.3.1
+  copy_with_extension_gen: ^5.0.4
+  flutter_gen_runner: ^5.3.2
+  firebase_messaging: ^14.6.8
   
 
 dev_dependencies:
