--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   copy_with_extension_gen: ^5.0.4
   flutter_gen_runner: ^5.3.2
   firebase_messaging: ^14.6.8
+  flutter_svg: ^2.0.7
   
 
 dev_dependencies:
